--- a/tictactoe.ui
+++ b/tictactoe.ui
@@ -14,20 +14,20 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="square0">
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>140</y>
+      <y>130</y>
       <width>93</width>
-      <height>81</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="square1">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -40,20 +40,20 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="square2">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>140</y>
+      <x>470</x>
+      <y>130</y>
       <width>93</width>
-      <height>81</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="square3">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -66,33 +66,33 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="square4">
     <property name="geometry">
      <rect>
       <x>360</x>
       <y>230</y>
       <width>93</width>
-      <height>91</height>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="square5">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>240</y>
+      <x>470</x>
+      <y>230</y>
       <width>93</width>
-      <height>91</height>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_7">
+   <widget class="QPushButton" name="square6">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -105,10 +105,23 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="square7">
     <property name="geometry">
      <rect>
       <x>360</x>
+      <y>320</y>
+      <width>93</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="square8">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
       <y>330</y>
       <width>93</width>
       <height>81</height>
@@ -118,24 +131,11 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>340</y>
-      <width>93</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_10">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>420</y>
+      <x>360</x>
+      <y>430</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -144,11 +144,11 @@
      <string>Start Game</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="restartButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>450</y>
+      <x>360</x>
+      <y>470</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -157,17 +157,63 @@
      <string>Restart</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="settingsButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>490</y>
+      <x>360</x>
+      <y>510</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>Settings</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>130</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Wins</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>130</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Losses</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>160</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber_2">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>170</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
     </property>
    </widget>
   </widget>
